--- a/src/components/CurrentWeather.css
+++ b/src/components/CurrentWeather.css
@@ -45,7 +45,7 @@ p {
 
     #current-weather-div {
         font-size: 12px;
-        height: 315px;
+        height: 340px;
     }
 }
 
@@ -56,6 +56,6 @@ p {
 
     #current-weather-div {
         font-size: 15px;
-        height: 400px;
+        height: 420px;
     }
 }
